<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeAct"
    tools:showIn="@layout/main_content">

    <com.baidu.mapapi.map.MapView
        android:id="@+id/bdMapView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:clickable="true"
        android:focusable="true" />

    <RadioGroup
        android:id="@+id/RadioGroupMapType"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="4dip"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/mapNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:minHeight="48dp"
            android:text="@string/map_pic_normal"
            android:textColor="#00796B" />

        <RadioButton
            android:id="@+id/mapSatellite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:text="@string/map_pic_sate"
            android:textColor="#00796B" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/right_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="190dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/btn_auto_mode"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/bg_round_button"
            android:contentDescription="@string/joystick_auto"
            android:elevation="3dp"
            app:srcCompat="@drawable/ic_play"
            app:tint="@color/colorAccent" />

        <ImageButton
            android:id="@+id/input_pos"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/bg_round_button"
            android:contentDescription="@string/input_button"
            android:elevation="3dp"
            app:srcCompat="@drawable/ic_input"
            app:tint="@color/colorAccent" />

        <ImageButton
            android:id="@+id/zoom_in"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/bg_round_button"
            android:contentDescription="@string/zoom_in"
            android:elevation="3dp"
            app:srcCompat="@drawable/ic_zoom_in"
            app:tint="@color/colorAccent" />

        <ImageButton
            android:id="@+id/zoom_out"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/bg_round_button"
            android:contentDescription="@string/zoom_out"
            android:elevation="3dp"
            app:srcCompat="@drawable/ic_zoom_out"
            app:tint="@color/colorAccent" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal|center_vertical"
        android:textSize="10sp"
        android:textColor="@color/textSecondary"
        android:text="@string/app_statement"
        tools:ignore="SmallSp" />

    <LinearLayout
        android:id="@+id/route_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_route_bar"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:visibility="gone"
        android:elevation="4dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <ImageButton
            android:id="@+id/route_add"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/joystick_route_add"
            android:src="@drawable/ic_route_add"
            android:theme="@style/RippleWhite" />

        <TextView
            android:id="@+id/route_count"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="0 个途经点"
            android:textColor="@color/textPrimary"
            android:textSize="14sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/route_play"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/joystick_route_play"
            android:src="@drawable/ic_play"
            android:theme="@style/RippleWhite" />

        <ImageButton
            android:id="@+id/route_clear"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/joystick_route_clear"
            android:src="@drawable/ic_route_clear"
            android:theme="@style/RippleWhite" />
    </LinearLayout>

    <TextView
        android:id="@+id/route_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="点击地图添加途经点"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        android:background="@drawable/bg_route_tips"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:visibility="gone" />
</RelativeLayout>
